Task 2: display all tracks on the playlist

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,5 +2,7 @@
     "appName": "Spotify",
     "featuredPlaylistsTitle": "Editor's picks",
     "serverError": "Unfortunately, a server error prevented us from completing your request. Please try again.",
-    "refreshButton": "Refresh"
+    "refreshButton": "Refresh",
+    "playlistBy": "Playlist by",
+    "followers": "followers"
 }
